Small code cleanup